Fix cropped text for modguis with sliders

--- a/html/resources/pedals/boxy/boxy.css
+++ b/html/resources/pedals/boxy/boxy.css
@@ -373,7 +373,6 @@
     display:block;
     font-size:11px;
     font-weight:bold;
-    height:7px;
     line-height:1;
     margin-bottom:3px;
     overflow:hidden;
